# rust-vanity-generator

./: .gitignore  Cargo.toml
src/: api.rs  lib.rs  main.rs  models.rs
