[package]
name = "solana-vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"
rand = "0.8"
num_cpus = "1.16"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"